--- a/estilo/style.css
+++ b/estilo/style.css
@@ -752,3 +752,61 @@ p#avaliacao{
 #average-rating{
     margin-bottom: 0px;
 }
+
+/* Botão de linguas */
+
+
+.language-selector {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    display: inline-block;
+    
+}
+
+.dropdown-toggle {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
+.dropdown-toggle img {
+    width: 20px;
+    height: auto;
+    vertical-align: middle;
+}
+
+.dropdown-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: var(--light-cream);
+    border: 1px solid var(--luxury-gold);
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: none;
+    z-index: 1000; /* Garante que o menu fique acima de outros elementos */
+}
+
+.dropdown-menu.show {
+    display: block;
+}
+
+.dropdown-menu li {
+    text-align: center;
+}
+
+.dropdown-menu li a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: var(--deep-green);
+}
+
+.dropdown-menu li a:hover {
+    background-color: #f5e5b1;
+}
